--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.log
 *.pyc
 *.swp
+*.env.dart
 .DS_Store
 .atom/
 .buildlog/
@@ -30,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/lib/env.dart
+**/lib/env.dart
 
 # Symbolication related
 app.*.symbols
